--- a/src/TerribleDev.Blog.Web/Views/Shared/Gtm.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Gtm.cshtml
@@ -1,4 +1,5 @@
 ﻿
+@inject Microsoft.ApplicationInsights.AspNetCore.JavaScriptSnippet JavaScriptSnippet
 @{
     Layout = null;
 }
@@ -7,9 +8,9 @@
 <link rel="preconnect" href="https://www.googletagmanager.com">
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-48128396-1"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-48128396-1');
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'UA-48128396-1');
 </script>
+@Html.Raw(JavaScriptSnippet.FullScript)
