--- a/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
@@ -2,7 +2,10 @@
     var hideNav = ViewData["HideNav"] != null ? "" : "withBody";
 }
 <nav class="navBar hide @hideNav" id="navBar">
-    <img src="" alt="An image of TerribleDev" data-src="/content/tommyAvatar4.jpg" class="lazy round" />
+    <picture>
+        <source srcset="" type="image/webp" alt="An image of TerribleDev" data-src="/content/tommyAvatar4.jpg.webp" class="lazy round" />
+        <img src="" alt="An image of TerribleDev" data-src="/content/tommyAvatar4.jpg" class="lazy round" />
+    </picture>
     <span>Tommy "Terrible Dev" Parnell</span>
     <ul class="sidebarBtns">
         <li><a href="/" class="link-unstyled">Home</a></li>
