inject deps, fix links for rss feeds

--- a/src/TerribleDev.Blog.Web/Views/Tags/AllTags.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Tags/AllTags.cshtml
@@ -1,4 +1,5 @@
-﻿@model Dictionary<string, List<IPost>>
+﻿@using System.Collections.Immutable;
+@model IDictionary<string, ImmutableList<IPost>>
 @{
     ViewData["Title"] = "all-tags";
 }
