precconnect to analytics domain vs

--- a/src/TerribleDev.Blog.Web/Views/Shared/Gtm.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Gtm.cshtml
@@ -6,6 +6,8 @@
 <link rel="preconnect" href="https://www.google-analytics.com">
 <link rel="preconnect" href="https://stats.g.doubleclick.net">
 <link rel="preconnect" href="https://www.googletagmanager.com">
+<link rel="preconnect" href="https://az416426.vo.msecnd.net" />
+<link rel="preconnect" href="https://dc.services.visualstudio.com" />
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-48128396-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
