--- a/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
@@ -17,17 +17,17 @@
     <meta property="og:site_name" content="@config.Title">
     <meta property="og:description" content="@Model.SummaryPlainShort">
     <meta property="og:updated_time" content="@Model.PublishDate.ToString("O")">
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="@Model.SummaryPlainShort" />
     <meta name="twitter:title" content="@Model.Title">
     <meta name="twitter:description" content="@Model.SummaryPlainShort">
     <meta name="twitter:creator" content="@@TerribleDev">
-    <meta property="og:image" content="https://www.gravatar.com/avatar/333e3cea32cd17ff2007d131df336061?s=640" />
     @foreach(var image in Model.Images.Take(6))
     {
-        <meta property="og:image" content="https://blog.terribledev.io@(image)">
+        <meta property="og:image" content="@image">
     }
     @if(Model.Images.Count > 0)
     {
-        <meta name="twitter:image" content="https://blog.terribledev.io@(Model.Images[0])">
+        <meta name="twitter:image" content="@(Model.Images[0])">
     }
+    <meta property="og:image" content="https://www.gravatar.com/avatar/333e3cea32cd17ff2007d131df336061?s=640" />
 }
