another twit meta

--- a/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
@@ -17,7 +17,7 @@
     <meta property="og:site_name" content="@config.Title">
     <meta property="og:description" content="@Model.SummaryPlainShort">
     <meta property="og:updated_time" content="@Model.PublishDate.ToString("O")">
-    <meta name="twitter:card" content="@Model.SummaryPlainShort" />
+    <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="@Model.Title">
     <meta name="twitter:description" content="@Model.SummaryPlainShort">
     <meta name="twitter:creator" content="@@TerribleDev">
