--- a/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
@@ -20,6 +20,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="@Model.Title">
     <meta name="twitter:description" content="@Model.SummaryPlainShort">
+    <meta name="twitter:site" content="@@TerribleDev">
     <meta name="twitter:creator" content="@@TerribleDev">
     @foreach(var image in Model.Images.Take(6))
     {
