--- a/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
@@ -31,4 +31,13 @@
         <meta name="twitter:image" content="@(Model.Images[0])">
     }
     <meta property="og:image" content="https://www.gravatar.com/avatar/333e3cea32cd17ff2007d131df336061?s=640" />
+    @if(Model.CodeBlockLangs.Count > 0)
+    {
+    }
+}
+@section Scripts 
+{
+    @if(Model.CodeBlockLangs.Count > 0)
+    {
+    }
 }
