prevent navbar reflow on load

--- a/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
@@ -2,7 +2,7 @@
     var hideNav = ViewData["HideNav"] != null ? "" : "withBody";
 }
 <nav class="navBar hide @hideNav" id="navBar">
-    <picture>
+    <picture class="navHero">
         <source srcset="" type="image/webp" alt="An image of TerribleDev" data-src="/content/tommyAvatar4.jpg.webp" class="lazy round" />
         <img src="" alt="An image of TerribleDev" data-src="/content/tommyAvatar4.jpg" class="lazy round" />
     </picture>
