--- a/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
@@ -13,7 +13,7 @@
     <meta name="description" content="@Model.SummaryPlainShort" />
     <meta property="og:type" content="blog">
     <meta property="og:title" content="@Model.Title">
-    <meta property="og:url" content="https://blog.terribledev.io/@Model.Url/">
+    <meta property="og:url" content="https://blog.terrible.dev/@Model.Url/">
     <meta property="og:site_name" content="@config.Title">
     <meta property="og:description" content="@Model.SummaryPlainShort">
     <meta property="og:updated_time" content="@Model.PublishDate.ToString("O")">
