--- a/src/TerribleDev.Blog.Web/Views/Shared/StockMeta.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/StockMeta.cshtml
@@ -2,7 +2,7 @@
 <meta name="description" content="My name is Tommy Parnell. I usually go by TerribleDev on the internets. These are just some of my writings and rants about the software space." />
 <meta property="og:type" content="blog">
 <meta property="og:title" content="@config.Title">
-<meta property="og:url" content="https://blog.terribledev.io/">
+<meta property="og:url" content="https://blog.terrible.dev/">
 <meta property="og:site_name" content="@config.Title">
 <meta property="og:description" content="My name is Tommy Parnell. I usually go by TerribleDev on the internets. These are just some of my writings and rants about the software space.">
 <meta name="twitter:card" content="summary">
