--- a/src/TerribleDev.Blog.Web/Views/Tags/AllTags.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Tags/AllTags.cshtml
@@ -12,4 +12,5 @@
 </cache>
 @section Head {
     <partial name="StockMeta" />
+    <link rel="canonical" href="https://blog.terrible.dev/all-tags/" />
 }
