--- a/src/TerribleDev.Blog.Web/Views/Tags/GetTag.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Tags/GetTag.cshtml
@@ -9,3 +9,9 @@
     <partial name="PostSummary" model="post" />
 }
 </cache>
+
+@section Head {
+  @if(!String.IsNullOrEmpty(Model.CanonicalUrl)) {
+    <link rel="canonical" href="@Model.CanonicalUrl" />
+  }
+}
