--- a/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
@@ -15,27 +15,28 @@
     <link asp-append-version="true" rel="icon" async href="~/favicon.ico" />
     <title>@ViewData["Title"] - @config.Title</title>
     <environment names="Development">
-        <inline-style href="css/site.css"></inline-style>
+        <link asp-append-version="true" rel="stylesheet" href="~/css/site.css" />
     </environment>
     <environment names="Production">
-        <inline-style href="css/site.min.css"></inline-style>
+        <link asp-append-version="true" rel="stylesheet" href="~/css/site.min.css" />
+    </environment>
+    <environment names="Development">
+        <link asp-append-version="true" rel="preload" href="~/js/swi.js" />
+    </environment>
+    <environment names="Production">
+        <link asp-append-version="true" rel="preload" href="~/js/site.min.js" />
     </environment>
     @RenderSection("Head", false)
 </head>
 <body>
-    <partial name="Nav" />
     <header class="header">
         <svg aria-label="Open Menu" id="menuBtn" role="button" xmlns="http://www.w3.org/2000/svg" width="32" height="32"><path d="M4 10h24c1.104 0 2-.896 2-2s-.896-2-2-2H4c-1.104 0-2 .896-2 2s.896 2 2 2zm24 4H4c-1.104 0-2 .896-2 2s.896 2 2 2h24c1.104 0 2-.896 2-2s-.896-2-2-2zm0 8H4c-1.104 0-2 .896-2 2s.896 2 2 2h24c1.104 0 2-.896 2-2s-.896-2-2-2z" /></svg>
         <div class="headerCallout"><a href="/" class="link-unstyled ">@config.Title</a></div>
     </header>
-    @{ 
-        var bodyBump =  ViewData["HideNav"] == null ? "bodyWithNav": "";
-    }
-    <main role="main" class="@bodyBump headerBump">
-        <div class="main-content-wrap">
-            @RenderBody()
-        </div>
-    </main>
+    <partial name="Nav" />
+      <main class="headerBump main-content-wrap">
+              @RenderBody()
+      </main>
     @RenderSection("Scripts", required: false)
     <environment names="Development">
         <script asp-append-version="true" src="~/js/swi.js" async></script>
