--- a/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
@@ -1,7 +1,4 @@
-﻿@{ 
-    var hideNav = ViewData["HideNav"] != null ? "" : "withBody";
-}
-<nav class="navBar hide @hideNav" id="navBar">
+﻿<nav class="navBar hide" id="navBar">
     <picture class="navHero">
         <source srcset="" type="image/webp" alt="An image of TerribleDev" data-src="/content/tommyAvatar4.jpg.webp" class="lazy round" />
         <img src="" alt="An image of TerribleDev" data-src="/content/tommyAvatar4.jpg" class="lazy round" />
