--- a/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
@@ -21,10 +21,10 @@
         <link asp-append-version="true" rel="stylesheet" href="~/css/site.min.css" />
     </environment>
     <environment names="Development">
-        <link asp-append-version="true" rel="preload" href="~/js/swi.js" />
+        <link asp-append-version="true" rel="preload" as="script" href="~/js/swi.js" />
     </environment>
     <environment names="Production">
-        <link asp-append-version="true" rel="preload" href="~/js/site.min.js" />
+        <link asp-append-version="true" rel="preload" as="script" href="~/js/site.min.js" />
     </environment>
     @RenderSection("Head", false)
 </head>
