--- a/src/TerribleDev.Blog.Web/Views/Tags/AllTags.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Tags/AllTags.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Collections.Immutable;
-@model IDictionary<string, ImmutableList<IPost>>
+﻿@model IDictionary<string, IList<IPost>>
 @{
     ViewData["Title"] = "all-tags";
 }
