--- a/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
@@ -21,6 +21,18 @@
         <link asp-append-version="true" rel="stylesheet" href="~/css/site.min.css" />
     </environment>
     <environment names="Development">
+        <link asp-append-version="true" media="screen and (min-width: 769px)" rel="stylesheet" href="~/css/site.desktop.css" />
+    </environment>
+    <environment names="Production">
+        <link asp-append-version="true" media="screen and (min-width: 769px)" rel="stylesheet" href="~/css/site.desktop.min.css" />
+    </environment>
+    <environment names="Development">
+        <link asp-append-version="true" media="screen and (max-width: 768px)" rel="stylesheet" href="~/css/site.mobile.css" />
+    </environment>
+    <environment names="Production">
+        <link asp-append-version="true" media="screen and (max-width: 768px)" rel="stylesheet" href="~/css/site.mobile.min.css" />
+    </environment>
+    <environment names="Development">
         <link asp-append-version="true" rel="preload" as="script" href="~/js/swi.js" />
     </environment>
     <environment names="Production">
