make nav sticky

--- a/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
@@ -1,16 +1,18 @@
 ﻿<nav class="navBar hide" id="navBar">
-    <picture class="navHero">
-        <source srcset="" type="image/webp" alt="An image of TerribleDev" data-src="/content/tommyAvatar4.jpg.webp" class="lazy round" />
-        <img src="" alt="An image of TerribleDev" data-src="/content/tommyAvatar4.jpg" class="lazy round" />
-    </picture>
-    <span>Tommy "Terrible Dev" Parnell</span>
-    <ul class="sidebarBtns">
-        <li><a href="/" class="link-unstyled">Home</a></li>
-        <li><a href="/all-tags" class="link-unstyled">Tags</a></li>
-        <li><a href="/rss.xml" class="link-unstyled">RSS Feed</a></li>
-        <li><a href="https://github.com/terribledev" rel="noopener" target="_blank" class="link-unstyled">Github</a></li>
-        <li><a href="https://twitter.com/terribledev" rel="noopener" target="_blank" class="link-unstyled">Twitter</a></li>
-        <li><a href="mailto:tommy@terribledev.io" class="link-unstyled">Email</a></li>
-        <li><span class="link-unstyled" id="closeNav">Close Navbar</span></li>
-    </ul>
+  <div class="navContent">
+      <picture class="navHero">
+          <source srcset="" type="image/webp" alt="An image of TerribleDev" data-src="/content/tommyAvatar4.jpg.webp" class="lazy round" />
+          <img src="" alt="An image of TerribleDev" data-src="/content/tommyAvatar4.jpg" class="lazy round" />
+      </picture>
+      <span>Tommy "Terrible Dev" Parnell</span>
+      <ul class="sidebarBtns">
+          <li><a href="/" class="link-unstyled">Home</a></li>
+          <li><a href="/all-tags" class="link-unstyled">Tags</a></li>
+          <li><a href="/rss.xml" class="link-unstyled">RSS Feed</a></li>
+          <li><a href="https://github.com/terribledev" rel="noopener" target="_blank" class="link-unstyled">Github</a></li>
+          <li><a href="https://twitter.com/terribledev" rel="noopener" target="_blank" class="link-unstyled">Twitter</a></li>
+          <li><a href="mailto:tommy@terribledev.io" class="link-unstyled">Email</a></li>
+          <li><span class="link-unstyled" id="closeNav">Close Navbar</span></li>
+      </ul>
+    </div>
 </nav>
