--- a/src/TerribleDev.Blog.Web/wwwroot/css/site.desktop.css
+++ b/src/TerribleDev.Blog.Web/wwwroot/css/site.desktop.css
@@ -10,6 +10,10 @@
       position: relative;
       box-shadow: none;
     }
+    .navContent {
+      position: sticky;
+      top: 20px;
+    }
     .navBar.hide {
       display: flex;
     }
