--- a/src/TerribleDev.Blog.Web/wwwroot/css/site.desktop.css
+++ b/src/TerribleDev.Blog.Web/wwwroot/css/site.desktop.css
@@ -2,6 +2,7 @@
     .rootbox {
       display: flex;
       flex-direction: row;
+      min-height: 100vh;
     }
     .navBar {
       min-width: 270px;
