--- a/src/TerribleDev.Blog.Web/wwwroot/css/site.css
+++ b/src/TerribleDev.Blog.Web/wwwroot/css/site.css
@@ -1,4 +1,33 @@
-﻿html {
+﻿:root {
+  --headline: #4a4a4a;
+  --body-text-color: #5d686f;
+  --block-quote-left-border: #d1dced;
+  --code-block-background-color: #f5f5f5;
+  --primary-background: #FFFFFF;
+  --link-color: #00558d;
+  --link-visited: var(--link-color);
+  /* --link-visited: #6c6c6c; */
+  --border-color: #738691;
+  --horizontal-rule: #dfe2e7;
+  --nav-bar-background: var(--headline);
+  --nav-bar-text-color: var(--primary-background);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --headline: #f0f0f0;
+    --body-text-color: #ffffff;
+    --block-quote-left-border: #d1dced;
+    --code-block-background-color: #727171;
+    --primary-background: #323131;
+    --link-color: #3faff9;
+    /* --link-visited: #d8dbde; */
+    --border-color: #bdcad2;
+    --horizontal-rule: #626468;
+  }
+}
+
+html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -8,7 +37,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #4a4a4a;
+  color: var(--headline);
   line-height: 1.45;
   letter-spacing: -0.01em;
   line-height: 1.25em;
@@ -42,7 +71,8 @@ body {
   text-rendering: optimizeLegibility;
   letter-spacing: -0.01em;
   line-height: 1.9rem;
-  color: #5d686f;
+  background-color: var(--primary-background);
+  color: var(--body-text-color);
   font-size: 1.125rem;
   margin: 0;
 }
@@ -76,7 +106,7 @@ body {
 }
 
 blockquote {
-  border-left: 2px solid #d1dced;
+  border-left: 2px solid var(--block-quote-left-border);
   padding: 0.4em 1.2em;
 }
 
@@ -86,7 +116,7 @@ pre {
   font-family: "Courier New", Courier, monospace;
   font-weight: 600;
   border-radius: 3px;
-  background: #f5f5f5;
+  background: var(--code-block-background-color);
   padding: 0 0.4em;
   overflow-x: auto;
 }
@@ -97,16 +127,16 @@ pre > code {
  }
 
 a {
-  color: #00558d;
+  color: var(--link-color);
   font-weight: 400;
 }
 
 a:visited {
-  color: #6c6c6c;
+  color: var(--link-visited);
 }
 
 .btmRule {
-  border-bottom: 1px solid #eef2f8;
+  border-bottom: 1px solid var(--horizontal-rule);
   padding-bottom: 3rem;
 }
 
@@ -115,8 +145,8 @@ a:visited {
   flex-direction: column;
   position: fixed;
   align-items: center;
-  background: #4a4a4a;
-  color: white;
+  background: var(--nav-bar-background);
+  color: var(--nav-bar-text-color);
   padding-top: 20px;
   width: 30vw;
   height: 100vh;
@@ -135,9 +165,9 @@ a:visited {
   width: 100%;
   height: 3.5rem;
   top: 0;
-  border: 1px solid #eef2f8;
-  color: #4a4a4a;
-  background-color: white;
+  border: 1px solid var(--horizontal-rule);
+  color: var(--headline);
+  background-color: var(--primary-background);
   z-index: 20;
   padding: 0;
   margin: 0;
@@ -149,6 +179,7 @@ a:visited {
 #menuBtn {
   cursor: pointer;
   margin-left: 1rem;
+  fill: var(--headline);
 }
 
 .sidebarBtns {
@@ -178,16 +209,21 @@ a:visited {
 .btn {
   width: auto;
   height: auto;
-  background: #fff;
+  background: var(--primary-background);
   border-radius: 3px;
   margin: 0;
   cursor: pointer;
-  color: #5d686f;
-  border: 1px solid #9eabb3;
+  color: var(--border-color);
+  border: 1px solid var(--border-color);
   padding: 0.3em 0.2em;
   text-decoration: none;
   font-size: 1.1rem;
   text-transform: uppercase;
+}
+.btn:visited {
+  background: var(--primary-background);
+  color: var(--border-color);
+  border: 1px solid var(--border-color);
 }
 
 .btn.block {
@@ -198,8 +234,9 @@ a:visited {
 }
 
 .btn:hover {
-  color: #4a4a4a;
-  border: 1px solid #738691;
+  color: var(--body-text-color);
+  border: 1px solid var(--body-text-color);
+
 }
 
 a.link-unstyled,
