--- a/src/TerribleDev.Blog.Web/wwwroot/css/site.css
+++ b/src/TerribleDev.Blog.Web/wwwroot/css/site.css
@@ -43,26 +43,6 @@ h6 {
   line-height: 1.25em;
 }
 
-h1 {
-  font-size: 3.3rem;
-}
-
-h2 {
-  font-size: 2.6rem;
-}
-
-h3 {
-  font-size: 2.4rem;
-}
-
-h4 {
-  font-size: 2.2rem;
-}
-
-h5 {
-  font-size: 2rem;
-}
-
 article {
   margin-top: 0.5em;
 }
@@ -84,7 +64,8 @@ body {
   padding-left: 1.2em;
   padding-bottom: 1.2em;
   margin: 0 auto;
-  grid-area: c
+  grid-area: c;
+  word-break: break-word;
 }
 .headerBump {
   padding-top: 3.5rem;
