--- a/src/TerribleDev.Blog.Web/wwwroot/css/site.desktop.css
+++ b/src/TerribleDev.Blog.Web/wwwroot/css/site.desktop.css
@@ -1,30 +1,45 @@
 @media screen and (min-width: 769px) {
-    .rootbox {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr;
-      gap: 0;
-      grid-template:
-      "b b a"
-      "b b c"
-      "b b c";
-      grid-template-columns: .25fr .75fr;
-    }
-    .navBar {
-      height: auto;
-      position: relative;
-    }
-    .navContent {
-      position: sticky;
-      top: 20px;
-    }
-    .navBar.hide {
-      display: flex;
-    }
-    #closeNav {
-      display: none;
-    }
-    #menuBtn {
-      display: none;
-    }
+  h1 {
+    font-size: 3.3rem;
   }
+
+  h2 {
+    font-size: 2.6rem;
+  }
+
+  h3 {
+    font-size: 2.4rem;
+  }
+
+  h4 {
+    font-size: 2.2rem;
+  }
+
+  h5 {
+    font-size: 2rem;
+  }
+  .rootbox {
+    display: grid;
+    grid-template-areas:
+      "b a"
+      "b c";
+    grid-template-columns: minmax(auto, 270px) 1fr;
+    gap: 0;
+  }
+  .navBar {
+    height: auto;
+  }
+  .navContent {
+    position: sticky;
+    top: 20px;
+  }
+  .navBar.hide {
+    display: flex;
+  }
+  #closeNav {
+    display: none;
+  }
+  #menuBtn {
+    display: none;
+  }
+}
