--- a/src/TerribleDev.Blog.Web/wwwroot/css/site.mobile.css
+++ b/src/TerribleDev.Blog.Web/wwwroot/css/site.mobile.css
@@ -1,31 +1,32 @@
 @media screen and (max-width: 768px) {
-    h1 {
-      font-size: 2.6rem;
-    }
+  h1 {
+    font-size: 2.6rem;
+  }
 
-    h2 {
-      font-size: 2.4rem;
-    }
+  h2 {
+    font-size: 2.4rem;
+  }
 
-    h3 {
-      font-size: 2.2rem;
-    }
+  h3 {
+    font-size: 2.2rem;
+  }
 
-    h4 {
-      font-size: 2rem;
-    }
+  h4 {
+    font-size: 2rem;
+  }
 
-    h5 {
-      font-size: 1.8rem;
-    }
-    .rootbox {
-      display: grid;
-      grid-template-areas: "a" "c";
-      grid-template-columns: 1fr;
-    }
-    .navBar {
-      position: fixed;
-      width: 100vw;
-    }
-
+  h5 {
+    font-size: 1.8rem;
+  }
+  .rootbox {
+    display: grid;
+    grid-template-areas: "a" "c";
+    grid-template-rows: auto 1fr;
+    grid-template-columns: 1fr;
+    grid-gap: 0;
+  }
+  .navBar {
+    position: fixed;
+    width: 100vw;
+  }
 }
