--- a/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
@@ -6,9 +6,9 @@
       </picture>
       <span>Tommy "Terrible Dev" Parnell</span>
       <ul class="sidebarBtns">
-          <li><a href="/" class="link-unstyled">Home</a></li>
-          <li><a href="/all-tags/" class="link-unstyled">Tags</a></li>
-          <li><a href="/rss.xml" class="link-unstyled">RSS Feed</a></li>
+          <li><a asp-controller="Home" asp-action="Index" asp-route-pageNumber="@(null)" class="link-unstyled">Home</a></li>
+          <li><a asp-controller="Tags" asp-action="AllTags" class="link-unstyled">Tags</a></li>
+          <li><a asp-controller="Seo" asp-action="Rss" class="link-unstyled">RSS Feed</a></li>
           <li><a href="https://github.com/terribledev" rel="noopener" target="_blank" class="link-unstyled">Github</a></li>
           <li><a href="https://twitter.com/terribledev" rel="noopener" target="_blank" class="link-unstyled">Twitter</a></li>
           <li><a href="mailto:tommy@terribledev.io" class="link-unstyled">Email</a></li>
