--- a/src/TerribleDev.Blog.Web/Views/Shared/PostSummary.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/PostSummary.cshtml
@@ -6,5 +6,5 @@
     <div itemprop="articleBody">
         @Model.Summary
     </div>
-    <a href="@Model.RelativeUrl">Continue Reading </a>
+    <a asp-controller="Home" asp-action="Post" asp-route-postUrl="@Model.UrlWithoutPath">Continue Reading </a>
 </article>
