--- a/src/TerribleDev.Blog.Web/Views/Shared/PostSummary.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/PostSummary.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IPost
 
 <article class="btmRule">
-    <h3 itemprop="headline" class="headline"><a asp-controller="Home" asp-action="Post" asp-route-postUrl="@Model.UrlWithoutPath" class="link-unstyled">@Model.Title</a></h3>
+    <h3 itemprop="headline" class="headline"><a href="@Model.RelativeUrl" class="link-unstyled">@Model.Title</a></h3>
     <time class="headlineSubtext" itemprop="datePublished" content="@Model.PublishDate.ToString()">@Model.PublishDate.ToString("D")</time>
     <div itemprop="articleBody">
         @Model.Summary
     </div>
-    <a asp-controller="Home" asp-action="Post" asp-route-postUrl="@Model.UrlWithoutPath">Continue Reading </a>
+    <a href="@Model.RelativeUrl">Continue Reading </a>
 </article>
