--- a/src/TerribleDev.Blog.Web/Views/Shared/DisplayTemplates/Post.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/DisplayTemplates/Post.cshtml
@@ -3,7 +3,7 @@
 <article itemprop="blogPost">
     <h1 itemprop="headline" class="headline">@Model.Title</h1>
     <time class="headlineSubtext" itemprop="datePublished" content="@Model.PublishDate.ToString()">@Model.PublishDate.ToString("D")</time>
-    @Model.Content
+    @Model.Content.Value.Content
     @if (Model.tags.Count > 0)
     {
         <div>
