--- a/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
@@ -4,9 +4,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    @* <environment names="Production">
+    <environment names="Production">
         <partial name="Gtm" />
-    </environment> *@
+    </environment>
     <meta name="author" content="Tommy &quot;TerribleDev&quot; Parnell" />
     <meta name="theme-color" content="#4A4A4A" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
