--- a/src/TerribleDev.Blog.Web/Views/Shared/Gtm.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Gtm.cshtml
@@ -2,15 +2,16 @@
 @{
     Layout = null;
 }
-<link rel="preconnect" href="https://www.google-analytics.com">
-<link rel="preconnect" href="https://stats.g.doubleclick.net">
-<link rel="preconnect" href="https://www.googletagmanager.com">
-<link rel="preconnect" href="https://az416426.vo.msecnd.net" />
-<link rel="preconnect" href="https://dc.services.visualstudio.com" />
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-48128396-1"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     gtag('config', 'UA-48128396-1');
+    document.addEventListener('DOMContentLoaded', function () {
+        var script = document.createElement('script');
+        script.src = 'https://www.googletagmanager.com/gtag/js?id=UA-48128396-1';
+        script.async = true
+        document.body.appendChild(script);
+    });
 </script>
+
