--- a/src/TerribleDev.Blog.Web/Views/Home/Index.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Index.cshtml
@@ -27,4 +27,8 @@
     <script type="application/ld+json">
         @Html.Raw(Model.BlogLD.ToHtmlEscapedString())
     </script>
+    <script type="application/ld+json">
+        @Html.Raw(Model.SiteLD.ToHtmlEscapedString())
+    </script>
+
 }
