--- a/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
@@ -32,6 +32,6 @@
     }
     <meta property="og:image" content="https://www.gravatar.com/avatar/333e3cea32cd17ff2007d131df336061?s=640" />
     <script type="application/ld+json">
-        @Html.Raw(Model.Content.Value.JsonLD.ToHtmlEscapedString())
+        @Html.Raw(Model.Content.Value.JsonLDString)
     </script>
 }
