--- a/src/TerribleDev.Blog.Web/Views/Shared/Gtm.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Gtm.cshtml
@@ -1,17 +1,36 @@
 ﻿
 @{
     Layout = null;
+    var amp = ViewData["amp"] as bool? ?? false;
 }
-<script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'UA-48128396-1');
-    document.addEventListener('DOMContentLoaded', function () {
-        var script = document.createElement('script');
-        script.src = 'https://www.googletagmanager.com/gtag/js?id=UA-48128396-1';
-        script.async = true
-        document.body.appendChild(script);
-    });
-</script>
 
+@if(amp)
+{
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-48128396-1');
+        document.addEventListener('DOMContentLoaded', function () {
+            var script = document.createElement('script');
+            script.src = 'https://www.googletagmanager.com/gtag/js?id=UA-48128396-1';
+            script.async = true
+            document.body.appendChild(script);
+        });
+    </script>
+}
+else
+{
+    <amp-analytics type="gtag" data-credentials="include">
+    <script type="application/json">
+    {
+    "vars" : {
+        "gtag_id": "UA-48128396-1",
+        "config" : {
+        "UA-48128396-1: { "groups": "default" }
+        }
+    }
+    }
+    </script>
+    </amp-analytics>
+}
