--- a/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Nav.cshtml
@@ -1,9 +1,20 @@
-﻿<nav class="navBar hide" id="navBar">
+﻿@{
+    var amp = ViewData["amp"] as bool?;
+}
+
+<nav class="navBar hide" id="navBar">
   <div class="navContent">
-      <picture class="navHero">
+      @if(amp == true)
+      {
+          <img src="/content/tommyAvatar4.jpg" alt="An image of TerribleDev" class="round navHero" />
+      }
+      else
+      {
+        <picture class="navHero">
           <source srcset="" type="image/webp" alt="An image of TerribleDev" data-src="/content/tommyAvatar4.jpg.webp" class="lazy round" />
           <img src="" alt="An image of TerribleDev" data-src="/content/tommyAvatar4.jpg" class="lazy round" />
       </picture>
+      }
       <span>Tommy "Terrible Dev" Parnell</span>
       <ul class="sidebarBtns">
           <li><a href="/" class="link-unstyled">Home</a></li>
