--- a/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
@@ -1,43 +1,67 @@
 ﻿@inject BlogConfiguration config
 
+@{
+    var amp = ViewData["amp"] as bool? ?? false;
+    var htmlTag = amp ? "amp" : "";
+    var boilerplate = @"<style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>";
+}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  @htmlTag>
 <head>
-    <meta charset="utf-8" />
     <environment names="Production">
         <partial name="Gtm" />
     </environment>
+    <meta charset="utf-8" />
     <meta name="author" content="Tommy &quot;TerribleDev&quot; Parnell" />
     <meta name="theme-color" content="#4A4A4A" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="alternate" type="application/atom+xml" async title="RSS" href="/rss.xml">
-    <link rel="manifest" href="~/manifest.json" async asp-append-version="true">
-    <link asp-append-version="true" rel="icon" async href="~/favicon.ico" />
+    <link rel="alternate" type="application/atom+xml" title="RSS" href="/rss.xml">
+    <link rel="manifest" href="~/manifest.json" asp-append-version="true">
+    <link asp-append-version="true" rel="icon" href="~/favicon.ico" />
     <title>@ViewData["Title"] - @config.Title</title>
-    <environment names="Development">
-        <link asp-append-version="true" rel="stylesheet" href="~/css/site.css" />
-    </environment>
-    <environment names="Production">
-        <link asp-append-version="true" rel="stylesheet" href="~/css/site.min.css" />
-    </environment>
-    <environment names="Development">
+
+    @if(amp) 
+    {
+        @Html.Raw(boilerplate);
+        <inline-style amp-custom href="css/site.css,css/site.desktop.css,css/site.mobile.css"></inline-style>
+
+        
+
+    }
+    else 
+    {
+        <environment names="Development">
+            <link asp-append-version="true" rel="stylesheet" href="~/css/site.css" />
+        </environment>
+        <environment names="Production">
+            <link asp-append-version="true" rel="stylesheet" href="~/css/site.min.css" />
+        </environment>
+            <environment names="Development">
         <link asp-append-version="true" media="screen and (min-width: 769px)" rel="stylesheet" href="~/css/site.desktop.css" />
-    </environment>
-    <environment names="Production">
-        <link asp-append-version="true" media="screen and (min-width: 769px)" rel="stylesheet" href="~/css/site.desktop.min.css" />
-    </environment>
-    <environment names="Development">
-        <link asp-append-version="true" media="screen and (max-width: 768px)" rel="stylesheet" href="~/css/site.mobile.css" />
-    </environment>
-    <environment names="Production">
-        <link asp-append-version="true" media="screen and (max-width: 768px)" rel="stylesheet" href="~/css/site.mobile.min.css" />
-    </environment>
-    <environment names="Development">
-        <link asp-append-version="true" rel="preload" as="script" href="~/js/swi.js" />
-    </environment>
-    <environment names="Production">
-        <link asp-append-version="true" rel="preload" as="script" href="~/js/site.min.js" />
-    </environment>
+        </environment>
+        <environment names="Production">
+            <link asp-append-version="true" media="screen and (min-width: 769px)" rel="stylesheet" href="~/css/site.desktop.min.css" />
+        </environment>
+        <environment names="Development">
+            <link asp-append-version="true" media="screen and (max-width: 768px)" rel="stylesheet" href="~/css/site.mobile.css" />
+        </environment>
+        <environment names="Production">
+            <link asp-append-version="true" media="screen and (max-width: 768px)" rel="stylesheet" href="~/css/site.mobile.min.css" />
+        </environment>
+        <environment names="Development">
+            <link asp-append-version="true" rel="preload" as="script" href="~/js/swi.js" />
+        </environment>
+        <environment names="Production">
+            <link asp-append-version="true" rel="preload" as="script" href="~/js/site.min.js" />
+        </environment>
+    }
+
+
+    @if(amp) 
+    {
+        Html.Raw("<style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>");
+        <script async src="https://cdn.ampproject.org/v0.js"></script>
+    }
     @RenderSection("Head", false)
 </head>
 <body>
@@ -53,12 +77,22 @@
           </main>
       </div>
     </div>
-    @RenderSection("Scripts", required: false)
-    <environment names="Development">
-        <script asp-append-version="true" src="~/js/swi.js" async></script>
-    </environment>
-    <environment names="Production">
-        <script asp-append-version="true" src="~/js/site.min.js" async></script>
-    </environment>
+    @if(amp)
+    {
+            <amp-script>
+                <inline-script src="js/swi.js"></inline-script>
+            </amp-script>
+    }
+    else
+    {
+        @RenderSection("Scripts", required: false)
+        <environment names="Development">
+            <script asp-append-version="true" src="~/js/swi.js" async></script>
+        </environment>
+        <environment names="Production">
+            <script asp-append-version="true" src="~/js/site.min.js" async></script>
+        </environment>
+    }
+
 </body>
 </html>
