--- a/src/TerribleDev.Blog.Web/Views/Shared/Gtm.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Gtm.cshtml
@@ -4,7 +4,7 @@
     var amp = ViewData["amp"] as bool? ?? false;
 }
 
-@if(amp)
+@if(!amp)
 {
     <script>
         window.dataLayer = window.dataLayer || [];
