--- a/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
@@ -68,7 +68,14 @@
   <a class="skip-main" href="#main">Skip to main content</a>
   <div class="rootbox">
       <header class="header">
-          <svg aria-label="Open Menu" id="menuBtn" role="button" xmlns="http://www.w3.org/2000/svg" width="32" height="32"><path d="M4 10h24c1.104 0 2-.896 2-2s-.896-2-2-2H4c-1.104 0-2 .896-2 2s.896 2 2 2zm24 4H4c-1.104 0-2 .896-2 2s.896 2 2 2h24c1.104 0 2-.896 2-2s-.896-2-2-2zm0 8H4c-1.104 0-2 .896-2 2s.896 2 2 2h24c1.104 0 2-.896 2-2s-.896-2-2-2z" /></svg>
+          @if(amp)
+          {
+              <a class="btn" id="menuBtn" href="/"> back to home </a>
+          }
+          else
+          {
+              <svg aria-label="Open Menu" id="menuBtn" role="button" xmlns="http://www.w3.org/2000/svg" width="32" height="32"><path d="M4 10h24c1.104 0 2-.896 2-2s-.896-2-2-2H4c-1.104 0-2 .896-2 2s.896 2 2 2zm24 4H4c-1.104 0-2 .896-2 2s.896 2 2 2h24c1.104 0 2-.896 2-2s-.896-2-2-2zm0 8H4c-1.104 0-2 .896-2 2s.896 2 2 2h24c1.104 0 2-.896 2-2s-.896-2-2-2z" /></svg>
+          }
           <div class="headerCallout"><a href="/" class="link-unstyled ">@config.Title</a></div>
       </header>
       <partial name="Nav" />
@@ -77,13 +84,7 @@
           </main>
       </div>
     </div>
-    @if(amp)
-    {
-            <amp-script>
-                <inline-script src="js/swi.js"></inline-script>
-            </amp-script>
-    }
-    else
+    @if(!amp)
     {
         @RenderSection("Scripts", required: false)
         <environment names="Development">
