--- a/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Home/Post.cshtml
@@ -5,7 +5,7 @@
     ViewData["amp"] = Model.IsAmp;
 }
 
-<cache vary-by-route="postUrl">
+<cache vary-by-route="postUrl,amp">
     @Html.DisplayFor(m => m.Post, "Post")
 </cache>
 
