--- a/src/TerribleDev.Blog.Web/Views/Shared/Gtm.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/Gtm.cshtml
@@ -4,7 +4,7 @@
     var amp = ViewData["amp"] as bool? ?? false;
 }
 
-@if(!amp)
+ @if(!amp)
 {
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -23,14 +23,14 @@ else
 {
     <amp-analytics type="gtag" data-credentials="include">
     <script type="application/json">
-    {
-    "vars" : {
-        "gtag_id": "UA-48128396-1",
-        "config" : {
-        "UA-48128396-1: { "groups": "default" }
+        {
+            "vars" : {
+                "gtag_id": "UA-48128396-1",
+                "config" : {
+                "UA-48128396-1": { "UA-48128396-1": "default"  }
+                }
+            }
         }
-    }
-    }
     </script>
     </amp-analytics>
 }
