--- a/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
+++ b/src/TerribleDev.Blog.Web/Views/Shared/_Layout.cshtml
@@ -91,7 +91,7 @@
     }
     else
     {
-        <environment names="Development">
+        <environment names="Production">
             <partial name="Gtm" />
         </environment>
     }
